2005-04-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (main): let's avoid CPU burn
	on stop()

2005-04-25  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: avoid includes problems when we're not
	compiling the Mozilla plugin (Closes: #301372)

2005-04-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: add video/x-ms-wmv as a supported
	mime-type (Closes: #301837)

2004-04-21  Abduxukur Abdurixit <abduxukur.abdurixit@t-systems.ch>

	* configure.in: added ug.po 

2005-04-19  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_subtitles): don't hardcode the maximum
	number of subtitle tracks (Closes: #172520)
	* src/totem-video-thumbnailer.c: we don't actually need GNOME for the
	thumbnailer

2005-04-18  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* src/Makefile.am: Fix plugin installation directory and IDL
	include	directory detection. Fixes bug #300879.

2005-04-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-plugin.cpp: change the project URL
	(Closes: #301042)

2005-04-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	* src/Makefile.am:
	  Install mozilla-plugin in mozilla prefix, and in the correct
	  mozilla or firefox subdirectory (#300879).

2005-04-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c: (parse_stream_info),
	(get_list_of_type), (bacon_video_widget_set_show_visuals):
	* README:
	  Add language labels for subtitles and language labels or
	  codecs for audio streams.

2005-04-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* README:
	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_size_allocate), (got_video_size), (cb_iterate),
	(caps_set), (bacon_video_widget_set_aspect_ratio),
	(bacon_video_widget_get_aspect_ratio), (bacon_video_widget_new):
	  Implement manually setting display aspect ratio.
