@@ -1,3 +1,9 @@
+2005-04-27  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-menu.c: (totem_remove_deleted_recent),
+	(totem_setup_recent): remove unexisting local files from the recent
+	files list (Closes: #173125)
+
 2005-04-25  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-video-thumbnailer.c: (main): let's avoid CPU burn
